--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -13,7 +13,7 @@
     "dev": "yarn build:clean && concurrently \"yarn watch-compile\" \"yarn watch-dev | yarn pino-pretty\"",
     "build": "yarn build:clean && yarn build:typescript && yarn build:emails",
     "start": "node dist/server.js",
-    "start:with-tracing": "node --require @opentelemetry/auto-instrumentations-node/register dist/server.js",
+    "start:with-tracing": "node --require ./dist/tracing.js dist/server.js",
     "repl": "node --require ts-node/register/transpile-only --experimental-repl-await repl",
     "test": "jest --forceExit --verbose --detectOpenHandles",
     "type-check": "tsc --pretty --noEmit",
@@ -35,6 +35,7 @@
     "@growthbook/proxy-eval": "^1.0.0",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.1",
+    "@opentelemetry/sdk-node": "^0.44.0",
     "@sentry/node": "^7.14.2",
     "@slack/web-api": "^5.14.0",
     "@types/handlebars": "^4.1.0",
