--- a/packages/back-end/package.json
+++ b/packages/back-end/package.json
@@ -35,6 +35,9 @@
     "@growthbook/proxy-eval": "^1.0.0",
     "@opentelemetry/api": "^1.4.1",
     "@opentelemetry/auto-instrumentations-node": "^0.37.1",
+    "@opentelemetry/exporter-metrics-otlp-proto": "^0.44.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.44.0",
+    "@opentelemetry/sdk-metrics": "^1.17.1",
     "@opentelemetry/sdk-node": "^0.44.0",
     "@sentry/node": "^7.14.2",
     "@slack/web-api": "^5.14.0",
